# android-workmanager-example

./: README.md  build.gradle.kts
src/androidTest/java/com/example/workmanager/: WorkerTest.kt
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  work_manager_crasher.cpp
src/main/java/com/example/workmanager/: CustomRemoteWorkService.kt  WorkManagerActivity.kt  WorkManagerNativeCrasher.kt  WorkerRenameFactory.kt
src/main/res/layout/: activity_work_manager.xml
